deploy.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: nginx-app
    name: nginx-app
  spec:
    externalIPs:
    - 1.1.1.200
    ports:
    - nodePort: 31115
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: nginx-app
    sessionAffinity: None
    type: NodePort
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      app: nginx-app
    name: nginx-app
  spec:
    replicas: 2
    selector:
      matchLabels:
        app: nginx-app
    template:
      metadata:
        labels:
          app: nginx-app
      spec:
        containers:
        - image: nginx
          imagePullPolicy: Always
          name: nginx
kind: List
metadata:
  resourceVersion: ""
