ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
  - host: u1
  defaultBackend:
    service:
      name: nginx-app
      port:
        number: 80
